fixed overflowing width

--- a/portfolio/src/global.css
+++ b/portfolio/src/global.css
@@ -3,6 +3,7 @@
 @import "tailwindcss/utilities";
 body {
   @apply font-sans;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
